testsuite/tests/module/mod102.stderr

mod102.hs:8:5: error:
    Variable not in scope: methB :: Bool -> Bool -> ()
    Suggested fix: Perhaps use ‘methA’ (imported from Mod102_AuxB)
